2001-07-19  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-engine.[ch]: Ported to GObject.
	* bonobo/bonobo-ui-xml.[ch]: Ported to GObject.

2001-07-17  Michael Meeks  <michael@ximian.com>

	* bonobo/Makefile.am (libbonoboinclude_HEADERS): remove
	bonobo-ui-compat.h: extremely stale.

2001-07-17  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-status.c
	(impl_bonobo_ui_sync_status_build): don't have a 'resize
	grip' on the statusbar.

	* bonobo/bonobo-ui-component.c (impl_get_prop):
	free the string.

	* bonobo/bonobo-ui-toolbar.c (impl_destroy): cope with
	a NULL priv->popup_item.
	(impl_remove): don't do a typechecked cast -
	popup_item can be NULL.
	(impl_destroy): check before unref.

	* bonobo/bonobo-wrapper.c (bonobo_wrapper_draw): kill.

	* bonobo/bonobo-ui-toolbar.c (impl_draw): kill.

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_new_default): make default name
	just getpid () + static idx.

	* bonobo/bonobo-ui-toolbar-separator-item.c
	(impl_expose_event): move the draw impl. here.
	(impl_draw): kill.

	* bonobo/bonobo-ui-toolbar.c (impl_expose_event): return
	TRUE from expose.

	* libbonoboui.h: include bonobo-ui-main.h

	* tests/test-reparent.c (main): do a bonobo_ui_init.

2001-07-12  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c (impl_expose_event): port to
	Gtk+ 2.0

2001-07-13  Darin Adler  <darin@bentspoon.com>

	* configure.in: Remove duplicate macros.
	* doc/.cvsignore: Ignore some generated files.

2001-07-12  Murray Cumming <murrayc@usa.net>

	* doc directory: Added some files from the original bonobo module,
	which deal with UI stuff. Maybe others should go in too, but
	I don't know whether the component stuff is in libbonobo or
	libbonoboui.
	
2001-07-12  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-engine.c: Fix signal marshaller for EMIT_EVENT_ON.

	* bonobo/bonobo-ui-component.c: Fix signal marshaller for UI_EVENT.

2001-07-05  Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>
